# realtime-chatrooms

./: Cargo.toml  README.md
client/: package-lock.json  package.json
client/components/: avatar.js  conversation.js  login.js  room.js
client/libs/: useConversation.js  useLocalStorage.js  useWebsocket.js
client/pages/: index.js
react-app/: package-lock.json
react-app/src/: App.css  App.js
react-app/src/pages/home/: index.js  styles.module.css
src/: database.rs  lib.rs  main.rs  message.rs  models.rs  room.rs  routes.rs  server.rs  session.rs
static/: script.js
