[package]
name = "realtime_chatrooms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
actix-cors = "0.6.5"
rand = "0.8.5"
serde = "1.0.147"
serde_json = "1.0.88"
mongodb = "2.3.1"
dotenv = "0.15"
tokio = "1.34"
bson = {version = "2.8.1", features = ["chrono-0_4"]}
chrono = "0.4"
futures = "0.3.30"